# text_classification

./: .gitignore  pyproject.toml
data/: historical_data.csv  new_data.csv
models/: lstm4.keras  lstm_emb.keras
models/tuner/bayes_opt/: oracle.json
models/tuner/bayes_opt/trial_00/: checkpoint.weights.h5  trial.json
models/tuner/bayes_opt/trial_01/: checkpoint.weights.h5  trial.json
models/tuner/bayes_opt/trial_02/: trial.json
models/tuner/bayes_opt/trial_03/: trial.json
models/tuner/bayes_opt/trial_04/: trial.json
models/tuner/bayes_opt/trial_05/: trial.json
models/tuner/bayes_opt/trial_06/: checkpoint.weights.h5  trial.json
models/tuner/bayes_opt/trial_07/: trial.json
models/tuner/bayes_opt/trial_08/: trial.json
models/tuner/bayes_opt/trial_09/: trial.json
models/tuner_2/bayes_opt/: oracle.json
models/tuner_2/bayes_opt/trial_00/: trial.json
models/tuner_2/bayes_opt/trial_01/: checkpoint.weights.h5  trial.json
models/tuner_2/bayes_opt/trial_02/: checkpoint.weights.h5  trial.json
models/tuner_2/bayes_opt/trial_03/: checkpoint.weights.h5  trial.json
models/tuner_2/bayes_opt/trial_04/: checkpoint.weights.h5  trial.json
models/tuner_2/bayes_opt/trial_05/: trial.json
models/tuner_2/bayes_opt/trial_06/: checkpoint.weights.h5  (+1 more)
models/tuner_emb/bayes_opt/: oracle.json
notebooks/: 00_text_classification_raw.ipynb  01_data_preprocessing.ipynb  01_text_classification.ipynb  02_text_classif_pre_trained.ipynb  02_text_classification_emb.ipynb
src/text_classification/: analytics.py  config.py  convert_notebooks.py  paths.py  plots.py
(+19 files in other folders)
