[tool.poetry]
name = "text-classification"
version = "0.1.0"
description = ""
authors = ["Borja <borjaregueral@gmail.com>"]
readme = "README.md"
packages = [{include = "text_classification", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
tensorflow-macos = "^2.16.2"
tensorflow-metal = "^1.1.0"
seaborn = "^0.13.2"
scikit-learn = "^1.5.1"
black = "^24.8.0"
isort = "^5.13.2"
nltk = "^3.9.1"
gensim = "^4.3.3"
keras-tuner = "^1.4.7"
textblob = "^0.18.0.post0"
vadersentiment = "^3.3.2"
plotly = "^5.24.0"
nbformat = "^5.10.4"
keras-nlp = "^0.14.4"
focal-loss = "^0.0.7"
nbconvert = "^7.16.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
